--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.4.0",
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "vue3-star-ratings": "^2.0.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
