--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "pinia": "^2.0.36",
     "swiper": "^9.3.2",
+    "v-lazy-image": "^2.1.1",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0",
     "vue3-star-ratings": "^2.0.5"
