--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "pinia": "^2.0.36",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "swiper": "^9.3.2",
     "v-lazy-image": "^2.1.1",
     "vue": "^3.3.2",
