--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "swiper": "^9.3.2",
     "v-lazy-image": "^2.1.1",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0",
-    "vue3-star-ratings": "^2.0.5"
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
